[package]
name = "depsrs-bug"
description = "Repro the bug"
license = "Apache-2.0"
repository = "https://github.com/cberner/depsrs-bug"
version = "0.2.0"
authors = ["Christopher Berner <christopherberner@gmail.com>"]
edition = "2018"
exclude = ["*.sh"]

[dependencies]
raft = {version = "0.6", default-features = false } # Bad

[profile.release]
debug = true
