[package]
name = "depsrs-bug"
description = "Repro the bug"
license = "Apache-2.0"
repository = "https://github.com/cberner/depsrs-bug"
version = "0.2.0"
authors = ["Christopher Berner <christopherberner@gmail.com>"]
edition = "2018"
exclude = ["*.sh"]

[dependencies.bytes]
version = "1"

[dependencies.fail]
version = "0.4"

[dependencies.fxhash]
version = "0.2.1"

[dependencies.getset]
version = "0.1.1"

[dependencies.protobuf]
version = "2"

[dependencies.raft-proto]
version = "0.6.0"
#default-features = false

[dependencies.rand]
version = "0.8"

[dependencies.slog]
version = "2.2"

[dependencies.slog-envlogger]
version = "2.1.0"

[dependencies.slog-stdlog]
version = "4"

[dependencies.slog-term]
version = "2.4.0"

[dependencies.thiserror]
version = "1.0"
[dev-dependencies.anyhow]
version = "1.0.40"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.datadriven]
version = "0.1.0"

[dev-dependencies.itertools]
version = "0.10.0"

[dev-dependencies.regex]
version = "1"

[dev-dependencies.slog-async]
version = "2.3.0"

[dev-dependencies.slog-envlogger]
version = "2.1.0"

[dev-dependencies.slog-stdlog]
version = "4"

[dev-dependencies.slog-term]
version = "2.4.0"

[profile.release]
debug = true
